@@ -200,7 +200,7 @@ void devsdk_nvpairs_free (devsdk_nvpairs *p)
 static const char *proptypes[] =
 {
   "Int8", "Uint8", "Int16", "Uint16", "Int32", "Uint32", "Int64", "Uint64",
-  "Float32", "Float64", "Bool", "String", "Binary", "unused1", "unused2",
+  "Float32", "Float64", "Bool", "String", "Unused1", "Binary", "Object", "Unused2",
   "Int8Array", "Uint8Array", "Int16Array", "Uint16Array", "Int32Array", "Uint32Array", "Int64Array", "Uint64Array",
   "Float32Array", "Float64Array", "BoolArray"
 };
